tests/baselines/reference/innerModExport1.errors.txt
==== tests/cases/compiler/innerModExport1.ts (2 errors) ====
    module Outer {
    
        // inner mod 1
        var non_export_var: number;
        module {
               ~
!!! error TS1005: ';' expected.
        ~~~~~~
!!! error TS2095: Could not find symbol 'module'.
            var non_export_var = 0;
            export var export_var = 1;
    
            function NonExportFunc() { return 0; }
    
            export function ExportFunc() { return 0; }
        }
    
        export var outer_var_export = 0;
        export function outerFuncExport() { return 0; }
    
    }
    
    Outer.ExportFunc();